[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/globals/AudioController.gd" type="Script" id=1]

[node name="AudioController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="PlayerSfxPlayer" type="AudioStreamPlayer" parent="."]

[node name="EnemySfxPlayer" type="AudioStreamPlayer" parent="."]

[node name="UiPlayer" type="AudioStreamPlayer" parent="."]
